src/test/resources/failing/fail22.pnd
@type(opt = 1) Animal
